[package]
name = "tpb"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["cherry_"]
description = "A minimal wrapper for The Pirate Bay API."

[dependencies]
chrono = { version = "0.4.31" }
reqwest = { version = "0.11.22", features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
